Fixed spacing

--- a/public/styles/pages/admin.css
+++ b/public/styles/pages/admin.css
@@ -15,9 +15,20 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 2rem;
+  border-right: 1px solid var(--bg-300);
 
   @media screen and (max-width: 700px) {
     flex-direction: row;
     padding: 1rem;
   }
+}
+
+.admin__sidebar-btn {
+  padding: 2rem 3rem !important;
+}
+
+.admin__title {
+  padding: 1rem 0;
+  text-align: center;
 }
